# Event-Maps

./: .gitignore  LICENSE  Makefile  README.md  create_admin.py  create_db.py  create_tag.py  docker-compose.yml  get_event.py  pyproject.toml  query_by_tags.py  requirements.txt  server.py
app/: example.env  main.py
app/event/: balloon_content.py  models.py  views.py
app/map/: views.py
app/news/: views.py
app/templates/: footer.html
app/user/: forms.py  models.py
migrations/: env.py
migrations/versions/: 23c92d3f574e_fixed_event_contacts.py  80491c688d67_init_migration.py  fb18f67b4d1a_fixed_event_model.py
mongo/: example.env-mongo
nginx/: nginx.conf
nginx/conf.d/: site.conf
postgres/sql/: 001_init_db.sql
server/: Dockerfile  example.env  requirements.txt  wsgi.py
server/db/: example.env
server/webapp/: __init__.py
templates/: index.html
webapp/: .dockerignore  Dockerfile  __init__.py  app.py  db.py  dependencies.py  example.env  forms.py  geocode.py  map.py  pyproject.toml  wsgi.py
webapp/admin/: views.py
webapp/db/: postgres.py
webapp/event/: balloon_content.py  forms.py  get_event_data.py  models.py  views.py
webapp/forms/: auth.py  events.py  users.py
webapp/map/: forms.py  utils.py  views.py
webapp/models/: events.py  tags.py  users.py
webapp/news/: views.py
webapp/schemes/: users.py
webapp/services/: users.py
webapp/static/: style.css
webapp/tag/: models.py
webapp/templates/: base.html  footer.html  index.html  login.html  menu.html
webapp/user/: forms.py  models.py  views.py
webapp/views/: auth.py  home.py  (+3 more)
(+57 files in other folders)
